Batch up a whole bunch of changes as we build out this site

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,7 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
+import Layout from '../layouts/Layout.astro';
 ---
-
-<MainLayout title="About">
-  <h2>About Code Like It's 198x</h2>
-  <p>This project is an exploration of programming for vintage systems, aiming to understand the constraints and creativity of early computing eras.</p>
-  <p>Created by Steve Hill.</p>
-</MainLayout> 
+<Layout title="About - Code 198x">
+	<h1>About Code 198x</h1>
+	<p>This site is dedicated to learning, teaching, and exploring programming on classic computer and console hardware.</p>
+</Layout> 
