--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
+import Layout from '../layouts/Layout.astro';
 ---
-
-<MainLayout title="Home">
-  <h2>Welcome to Code Like It's 198x</h2>
-  <p>This is a curriculum and blog dedicated to learning how to write code for vintage computers and consoles.</p>
-  <p>Join me on this journey to explore the roots of computing and programming.</p>
-</MainLayout> 
+<Layout title="Code 198x - Vintage Computing & Programming">
+	<h1>Welcome to Code 198x</h1>
+	<p>Exploring programming on vintage computers and consoles.</p>
+	
+	<p>Check out the <a href="/platforms">Platforms</a>, <a href="/tutorials">Tutorials</a>, or <a href="/concepts">Concepts</a>.</p>
+</Layout> 
