Get the skeleton site up

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,15 +8,19 @@
 		<title>Code Like It's 198x</title>
 	</head>
 	<body>
-		<slot />
+		<nav class="navbar">
+			<a href="/" class="site-logo">Code Like It's 198x</a>
+			<a href="/posts">Posts</a>
+			<a href="/about">About</a>
+			<a href="/systems">Systems</a>
+			<a href="/concepts">Concepts</a>
+			<a href="/people">People</a>
+			<a href="/companies">Companies</a>
+			<a href="/timeline">Timeline</a>
+		</nav>
+		<main class="main-content">
+			<slot />
+		</main>
+		<link rel="stylesheet" href="/src/styles/global.css" />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
