Start to structure things more appropriately

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/global.css';
+import SiteHeader from '../components/Header.astro';
+import SiteFooter from '../components/Footer.astro';
 ---
 
 <!doctype html>
@@ -10,21 +12,19 @@ import '../styles/global.css';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Code Like It's 198x</title>
+		<!-- Font performance optimisation -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Oxanium:wght@700&family=Pacifico&family=Roboto+Mono&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="/src/styles/global.css" />
 	</head>
 	<body>
-		<nav class="navbar">
-			<a href="/" class="site-logo">Code Like It's 198x</a>
-			<a href="/posts">Posts</a>
-			<a href="/about">About</a>
-			<a href="/systems">Systems</a>
-			<a href="/concepts">Concepts</a>
-			<a href="/people">People</a>
-			<a href="/companies">Companies</a>
-			<a href="/timeline">Timeline</a>
-		</nav>
+		<SiteHeader />
+
 		<main class="main-content">
 			<slot />
 		</main>
-		<link rel="stylesheet" href="/src/styles/global.css" />
+
+		<SiteFooter />
 	</body>
 </html>
