--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
   <section>
     <header>
-      <h1>About Code Like It's 198x</h1>
+      <h1>About This Project</h1>
     </header>
 
     <h2>What is this?</h2>
