Skeleton content for much of the site now

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,11 @@
 ---
 import SiteLogo from './SiteLogo.astro';
+import Hamburger from './Hamburger.astro';
+import Navigation from './Navigation.astro';
 ---
 
 <header class="navbar">
     <SiteLogo variant="horizontal" />
-    <nav>
-        <a href="/about">About</a>
-        <a href="/lessons">Lessons</a>
-        <a href="/systems">Systems</a>
-        <a href="/people">People</a>
-        <a href="/companies">Companies</a>
-        <a href="/timeline">Timeline</a>
-    </nav>
+    <Hamburger />
+    <Navigation />
 </header>
