--- a/src/pages/timeline.astro
+++ b/src/pages/timeline.astro
@@ -1,12 +1,7 @@
 ---
-import { getEntryBySlug } from 'astro:content';
-import Layout from '../layouts/Layout.astro';
-const timeline = await getEntryBySlug('timelines', 'global');
-if (!timeline) throw new Error('Global Timeline not found');
+import Layout from "../layouts/BaseLayout.astro";
 ---
 
-<Layout>
-  <h1>{timeline.data.title}</h1>
-  {timeline.data.description && <p>{timeline.data.description}</p>}
-  <article set:html={timeline.body} />
-</Layout> 
+<Layout title="Timeline">
+
+</Layout>
