--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/BaseLayout.astro';
 ---
 
-<Layout>
-  <h1>404: Page Not Found</h1>
+<Layout title="404: Page Not Found">
   <p>Sorry, the page you're looking for doesn't exist. Return <a href="/">home</a>.</p>
 </Layout> 
