--- a/src/pages/people/[slug].astro
+++ b/src/pages/people/[slug].astro
@@ -1,18 +1,21 @@
 ---
-import { getEntryBySlug, getCollection } from 'astro:content';
-import Layout from '../../layouts/Layout.astro';
-const { slug } = Astro.params;
-const person = await getEntryBySlug('people', slug) as any;
-if (!person) throw new Error('Person not found');
+import Layout from "../../layouts/BaseLayout.astro";
+import { getCollection, getEntry, render } from "astro:content";
 
 export async function getStaticPaths() {
-  const people = await getCollection('people') as any[];
-  return people.map(person => ({ params: { slug: person.slug } }));
+  const people = await getCollection("people");
+  return people.map((person) => ({
+    params: { slug: person.slug },
+  }));
 }
+
+const person = await getEntry("people", Astro.params.slug);
+if (!person) {
+    throw new Error(`Person not found: ${Astro.params.slug}`);
+}
+const { Content } = await render(person);
 ---
 
-<Layout>
-  <h1>{person.data.name}</h1>
-  {person.data.bio && <p>{person.data.bio}</p>}
-  <article set:html={person.body} />
-</Layout> 
+<Layout title={person.data.name}>
+    <Content />
+</Layout>
