--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -4,8 +4,10 @@ import Hamburger from './Hamburger.astro';
 import Navigation from './Navigation.astro';
 ---
 
-<header class="navbar">
-    <SiteLogo variant="horizontal" />
+<aside class="sidebar">
+  <div class="sidebar-inner">
+    <SiteLogo variant="stacked" />
     <Hamburger />
     <Navigation />
-</header>
+  </div>
+</aside>
