--- a/src/components/SiteLogo.astro
+++ b/src/components/SiteLogo.astro
@@ -1,10 +1,10 @@
 ---
-const { variant = "stacked", linkTo = "/" } = Astro.props;
+const { variant = "stacked", linkTo = "/", width = 160 } = Astro.props;
 ---
 
 <a class="brand" href={linkTo} aria-label="Code Like It's 198x">
   <picture>
     <source srcset={`/images/logo-${variant}.svg`} media="(prefers-color-scheme: dark)" />
-    <img src={`/images/logo-${variant}.svg`} alt="Code Like It's 198x logo" width="240" height="auto" />
+    <img src={`/images/logo-${variant}.svg`} alt="Code Like It's 198x logo" width={width} height="auto" />
   </picture>
 </a>
