--- a/src/pages/lessons/[system]/[tier]/index.astro
+++ b/src/pages/lessons/[system]/[tier]/index.astro
@@ -1,7 +1,7 @@
 ---
 // src/pages/lessons/[system]/[tier]/index.astro
 import { getCollection, render } from 'astro:content';
-import Layout from '../../../../layouts/BaseLayout.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 const { params } = Astro;
 const systemSlug = params.system;
