--- a/src/pages/lessons/index.astro
+++ b/src/pages/lessons/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../../layouts/BaseLayout.astro";
+import Layout from "../../layouts/Layout.astro";
 import { getCollection } from 'astro:content';
 
 // Define a type for the system data
@@ -37,7 +37,7 @@ const breadcrumbItems = [
 
 <Layout title="Lessons" breadcrumbItems={breadcrumbItems}>
   <h2>Choose your System</h2>
-  
+
   <ul>
     {systemsWithTiers.map(systemSlug => (
       <li id={`system-${systemSlug}`}>
