--- a/src/pages/vault/index.astro
+++ b/src/pages/vault/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../../layouts/BaseLayout.astro';
+import Layout from '../../layouts/Layout.astro';
 import AlphabeticalList from '../../components/AlphabeticalList.astro';
 import { sortAlphabetically, groupByFirstLetter } from '../../utils/helpers';
 
