--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import '../styles/global.css';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import Sidebar from '../components/Sidebar.astro';
 import Breadcrumb from '../components/Breadcrumb.astro';
 
 const pageTitle = Astro.props.title ?? '';
@@ -9,22 +8,18 @@ const breadcrumbItems = Astro.props.breadcrumbItems ?? [];
 const htmlTitle = pageTitle ? `${pageTitle} - Code Like It's 198x` : 'Code Like It\'s 198x';
 ---
 
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" class="h-full">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{htmlTitle}</title>
-
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Oxanium:wght@700&family=Pacifico&family=Roboto+Mono&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="/src/styles/global.css" />
 	</head>
 	<body>
-		<Header />
+		<Sidebar />
 
 		<main>
 			<article>
@@ -38,7 +33,6 @@ const htmlTitle = pageTitle ? `${pageTitle} - Code Like It's 198x` : 'Code Like 
 			</article>
 		</main>
 
-		<Footer />
 		<script>
 			import "../scripts/menu.js"
 		</script>
