--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/BaseLayout.astro";
+import Layout from "../layouts/Layout.astro";
 
 // Define the breadcrumb items
 const breadcrumbItems = [
