--- a/src/pages/lessons/[system]/[tier]/[lesson].astro
+++ b/src/pages/lessons/[system]/[tier]/[lesson].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection, getEntry, render } from 'astro:content';
-import Layout from '../../../../layouts/BaseLayout.astro';
+import Layout from '../../../../layouts/Layout.astro';
 
 const { params } = Astro;
 const systemSlug = params.system;
