--- a/src/pages/timeline.astro
+++ b/src/pages/timeline.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../layouts/BaseLayout.astro';
+import Layout from '../layouts/Layout.astro';
 
 // Fetch and sort events by date
 const events = (await getCollection('events')).sort((a, b) => new Date(a.data.date) - new Date(b.data.date));
