--- a/src/pages/vault/games/[slug].astro
+++ b/src/pages/vault/games/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../../../layouts/BaseLayout.astro";
+import Layout from "../../../layouts/Layout.astro";
 import { getCollection, getEntry, render } from "astro:content";
 
 export async function getStaticPaths() {
