--- a/src/pages/vault/systems/index.astro
+++ b/src/pages/vault/systems/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../../../layouts/BaseLayout.astro";
+import Layout from "../../../layouts/Layout.astro";
 import { getCollection } from "astro:content";
 import AlphabeticalList from "../../../components/AlphabeticalList.astro";
 import { sortAlphabetically, groupByFirstLetter } from "../../../utils/helpers";
