--- a/src/pages/lessons/[system]/[tier]/[lesson].astro
+++ b/src/pages/lessons/[system]/[tier]/[lesson].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection, getEntry, render } from 'astro:content';
 import Layout from '../../../../layouts/Layout.astro';
-
+import Breadcrumb from '../../../../components/Breadcrumb.astro';
 const { params } = Astro;
 const systemSlug = params.system;
 const tierSlug = params.tier;
@@ -51,6 +51,15 @@ const breadcrumbItems = [
 ];
 ---
 
-<Layout title={`${systemData?.data.name || 'Unknown System'} - Tier ${tierData?.data.order}: ${lesson.data.title || 'Unknown Lesson'}`} breadcrumbItems={breadcrumbItems}>
+<Layout noDefaultHeader={true} title={`${systemData?.data.name || 'Unknown System'} - Tier ${tierData?.data.order}: ${lesson.data.title || 'Unknown Lesson'}`} breadcrumbItems={breadcrumbItems}>
+    <header>
+        <Breadcrumb items={breadcrumbItems} />
+        <h1>
+            <span class="system">{systemData?.data.name || 'Unknown System'}</span>
+            <span class="tier">{tierData?.data.title || 'Unknown Tier'}</span>
+            <span class="lesson">{lesson.data.title || 'Unknown Lesson'}</span>
+        </h1>
+    </header>
+
     <Content />
 </Layout>
