--- a/src/pages/lessons/[system]/[tier]/index.astro
+++ b/src/pages/lessons/[system]/[tier]/index.astro
@@ -2,7 +2,7 @@
 // src/pages/lessons/[system]/[tier]/index.astro
 import { getCollection, render } from 'astro:content';
 import Layout from '../../../../layouts/Layout.astro';
-
+import Breadcrumb from '../../../../components/Breadcrumb.astro';
 const { params } = Astro;
 const systemSlug = params.system;
 const tierSlug = params.tier;
@@ -48,7 +48,14 @@ const breadcrumbItems = [
 ];
 ---
 
-<Layout title={`${systemData?.data.name || 'Unknown System'} - ${tierData?.data.title || 'Unknown Tier'}`} breadcrumbItems={breadcrumbItems}>
+<Layout noDefaultHeader={true} title={`${systemData?.data.name || 'Unknown System'} - ${tierData?.data.title || 'Unknown Tier'}`} breadcrumbItems={breadcrumbItems}>
+    <header>
+        <Breadcrumb items={breadcrumbItems} />
+        <h1>
+            <span class="system">{systemData?.data.name || 'Unknown System'}</span>
+            {tierData?.data.title || 'Unknown Tier'}
+        </h1>
+    </header>
 
 {tierData?.data.image && <img src={tierData.data.image} alt={tierData.data.title} />}
 <Content />
