--- a/src/pages/lessons/[system]/index.astro
+++ b/src/pages/lessons/[system]/index.astro
@@ -33,9 +33,9 @@ const breadcrumbItems = [
 
 <Layout title={systemData?.data.name || 'Unknown System'} breadcrumbItems={breadcrumbItems}>
 {tiers.map(tier => (
-  <article>
+  <article class="tier">
     <a href={`/lessons/${systemSlug}/${tier.data.tier}`}>
-      {tier.data.image && <img src={tier.data.image} alt={tier.data.title} width="300" />}
+      {tier.data.image && <img src={tier.data.image} alt={tier.data.title} />}
       <h2>{tier.data.title}</h2>
       <p>{tier.data.description}</p>
     </a>
