--- a/src/pages/lessons/index.astro
+++ b/src/pages/lessons/index.astro
@@ -38,11 +38,11 @@ const breadcrumbItems = [
 <Layout title="Lessons" breadcrumbItems={breadcrumbItems}>
   <h2>Choose your System</h2>
 
-  <ul>
+  <ul class="lessons-systems">
     {systemsWithTiers.map(systemSlug => (
       <li id={`system-${systemSlug}`}>
         <a href={`/lessons/${systemSlug}`}>
-          {systemsMap[systemSlug]?.image && <img src={systemsMap[systemSlug].image} alt={systemsMap[systemSlug].name} width="100" />}
+          {systemsMap[systemSlug]?.image && <img src={systemsMap[systemSlug].image} alt={systemsMap[systemSlug].name} />}
           {systemsMap[systemSlug]?.name || 'Unknown System'}
         </a>
       </li>
