--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,35 +36,39 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    @apply text-4xl mb-4;
+    @apply text-4xl my-4;
 }
 
 h2 {
-    @apply text-3xl mb-3;
+    @apply text-3xl my-3;
 }
 
 h3 {
-    @apply text-2xl mb-2;
+    @apply text-2xl my-2;
 }
 
 h4 {
-    @apply text-xl mb-1;
+    @apply text-xl my-1;
 }
 
 h5 {
-    @apply text-lg mb-0.5;
+    @apply text-lg my-0.5;
 }
 
 h6 {
-    @apply text-base mb-0;
+    @apply text-base my-0;
 }
 
 p {
     @apply mb-4 text-base leading-8;
 }
 
+ul {
+    @apply list-disc list-inside my-4;
+}
+
 li {
-    @apply mb-2;
+    @apply my-2;
 }
 
 a {
@@ -96,9 +100,61 @@ a:hover {
 }
 
 main {
-    @apply flex max-w-3xl p-8;
+    @apply flex max-w-4xl w-4xl p-8;
+}
+
+article {
+    @apply w-full;
 }
 
 .breadcrumbs {
     @apply text-secondary mb-4 font-heading;
+}
+
+hr {
+    @apply border-t-2 border-solid border-background-secondary my-8;
+}
+
+.lessons-systems {
+    @apply flex flex-wrap w-full justify-start;
+}
+
+.lessons-systems li {
+    @apply list-none w-1/4 mb-8 text-center;
+}
+
+.lessons-systems img {
+    @apply w-full h-full object-cover;
+}
+
+.tier {
+    @apply w-full mb-8;
+}
+
+.tier img {
+    @apply w-full aspect-video object-cover;
+}
+
+h1 .system {
+    @apply text-2xl block text-secondary mb-2;
+}
+
+h1 .tier {
+    @apply text-xl block text-secondary mb-2;
+}
+
+nav.alphabetical-list {
+    @apply mb-4 flex gap-2;
+}
+
+nav.alphabetical-list a {
+    @apply px-2 py-1 bg-background-secondary rounded-md border-solid border-2;
+}
+
+nav.alphabetical-list a:hover {
+    @apply bg-background-secondary;
+}
+
+nav.alphabetical-list a.disabled {
+    @apply bg-background-secondary text-secondary border-dashed;
 }
